<resources>
    <string name="app_name">Family Map</string>
    <string name="label_server_host">Server Host:</string>
    <string name="label_server_port">Server Port:</string>
    <string name="label_user_name">User Name:</string>
    <string name="label_password">Password:</string>
    <string name="label_first_name">First Name:</string>
    <string name="label_last_name">Last Name:</string>
    <string name="label_email">Email:</string>
    <string name="label_gender">Gender:</string>
    <string name="label_login">Login</string>
    <string name="label_register">Register</string>

    <string name="title_activity_maps">Map</string>
    <string name="mapFragmentMessage">Click on a marker to see event details</string>

    <string name="life_events_title">Life Events</string>
    <string name="family_title">Family</string>

    <string name="settingsMenu">Settings</string>
    <string name="searchMenu">Search</string>
    <string name="homeMenuItem">Home</string>
    <string name="life_story_lines">Life Story Lines</string>
    <string name="sub_life_story_lines">Show lines between life events for a person</string>
    <string name="family_tree_lines">Family Tree Lines</string>
    <string name="sub_family_tree_lines">Show lines between between family members</string>
    <string name="spouse_lines">Spouse Lines</string>
    <string name="sub_spouse_lines">Show lines between spouses</string>
    <string name="filter_father_side">Father\'s Side</string>
    <string name="sub_filter_father_side">Filter events by father\'s side</string>
    <string name="filter_mother_side">Mother\'s Side</string>
    <string name="sub_filter_mother_side">Filter events by mother\'s side</string>
    <string name="male_events">Male Events</string>
    <string name="female_events">Female Events</string>
    <string name="sub_male_events">Filter events associated with males</string>
    <string name="sub_female_events">Filter events associated with females</string>
    <string name="logout">Logout</string>
    <string name="sub_logout">Return to login screen</string>
</resources>
