<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView_server_host"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/label_server_host"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_server_host" />

    <TextView
        android:id="@+id/textView_server_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/label_server_port"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView_server_host"
        app:layout_constraintTop_toTopOf="@+id/text_server_port" />

    <TextView
        android:id="@+id/textView_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/label_user_name"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView_server_port"
        app:layout_constraintTop_toBottomOf="@+id/text_server_port" />

    <TextView
        android:id="@+id/textView_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/label_password"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView_user_name"
        app:layout_constraintTop_toBottomOf="@+id/text_user_name" />

    <TextView
        android:id="@+id/textView_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/label_first_name"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView_password"
        app:layout_constraintTop_toBottomOf="@+id/text_password" />

    <TextView
        android:id="@+id/textView_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/label_last_name"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView_first_name"
        app:layout_constraintTop_toBottomOf="@+id/text_first_name" />

    <TextView
        android:id="@+id/textView_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/label_email"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView_last_name"
        app:layout_constraintTop_toBottomOf="@+id/text_last_name" />

    <TextView
        android:id="@+id/textView_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/label_gender"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView_email"
        app:layout_constraintTop_toBottomOf="@+id/text_email" />

    <EditText
        android:id="@+id/text_server_host"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView_server_host"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/text_server_port"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/text_server_host"
        app:layout_constraintStart_toStartOf="@+id/text_server_host"
        app:layout_constraintTop_toBottomOf="@+id/text_server_host" />

    <EditText
        android:id="@+id/text_user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/text_server_port"
        app:layout_constraintStart_toStartOf="@+id/text_server_port"
        app:layout_constraintTop_toBottomOf="@+id/text_server_port" />

    <EditText
        android:id="@+id/text_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/text_user_name"
        app:layout_constraintStart_toStartOf="@+id/text_user_name"
        app:layout_constraintTop_toBottomOf="@+id/text_user_name" />

    <EditText
        android:id="@+id/text_first_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/text_password"
        app:layout_constraintStart_toStartOf="@+id/text_password"
        app:layout_constraintTop_toBottomOf="@+id/text_password" />

    <EditText
        android:id="@+id/text_last_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/text_first_name"
        app:layout_constraintStart_toStartOf="@+id/text_first_name"
        app:layout_constraintTop_toBottomOf="@+id/text_first_name" />

    <EditText
        android:id="@+id/text_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/text_last_name"
        app:layout_constraintStart_toStartOf="@+id/text_last_name"
        app:layout_constraintTop_toBottomOf="@+id/text_last_name" />


    <RadioGroup
        android:id="@+id/radioGroup_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/text_email"
        app:layout_constraintTop_toBottomOf="@+id/text_email">

        <RadioButton
            android:id="@+id/radio_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Male"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radio_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Female"
            android:textSize="18sp" />

    </RadioGroup>

    <Button
        android:id="@+id/button_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/label_login"
        app:layout_constraintEnd_toStartOf="@+id/button_register"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup_gender" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="244dp"
        android:text="@string/label_register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_sign_in" />


</androidx.constraintlayout.widget.ConstraintLayout>